# rDock

./: .gitignore  AGENTS.md  Cargo.toml  PERFORMANCE.md  README.md  RELEASING.md  STABILITY_FIXES.md  WARP.md  autoresearch.sh  config.toml  profile_docks.ps1
.github/images/: README.md
.github/workflows/: release.yml
bench/: render_bench.rs
src/: app_monitor.rs  config.rs  context_menu.rs  item_editor.rs  main.rs  renderer.rs  tooltip.rs  tray_popup.rs  window_focus.rs
